2010-06-29  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/visual_console_builder.editor.js
	godmode/reporting/visual_console_builder.editor.php: Fixed
	storing of width and height of the background of the visual map

2010-06-29  Sergio Martin <sergio.martin@artica.es>

	* include/Image/image_functions.php: Reverted an 
	undesired last commit change

2010-06-29  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/visual_console_builder.php
	godmode/reporting/visual_console_builder.editor.js: 
	Fixed the setting of original size by javascript when you 
	choose 0 x 0 in the visual map background for Bug: 3020721

2010-06-29  Junichi Satoh  <junichi@rworks.jp>

	* pandora_console_install: Added support for FreeBSD and RHEL/CentOS.

	* install.php: Added support for FreeBSD.

2010-06-28  Sergio Martin <sergio.martin@artica.es>

	* include/functions_db.php: Fixed the get_agent_modules 
	function to avoid return the pending delete modules

2010-06-25  Sergio Martin <sergio.martin@artica.es>

	* include/functions_ui.php: Adding a parameter to
	printTruncateText to personalize the suffix string
	of a truncate string

2010-06-25  Sergio Martin <sergio.martin@artica.es>

	* include/functions_ui.php: Changed substr() to
        mb_strimwidth() into printTruncateText function

2010-06-25  Junichi Satoh  <junichi@rworks.jp>

	* operation/agentes/status_monitor.php: Changed substr() to
	mb_strimwidth(). Module name should be truncated with displayed length,
	not number of characters.

2010-06-23  Ramon Novoa  <rnovoa@artica.es>

	* include/fgraph.php: Continue drawing combined charts if modules
	  without data are found.

2010-06-23  Sergio Martin <sergio.martin@artica.es>

	* include/functions_html.php: Added a parameter into
	print_select function to set style a selective 
	options into the select form control

2010-06-23  Sergio Martin <sergio.martin@artica.es>

	* include/auth/mysql.php
	operation/users/user.php